--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <load ="partials/header.html" />
+    <load ="partials/reviews.html" />
 
     <section>
       <h1>Example page title</h1>
